# offline-survival-assistant

./: .gitignore  README.md  README_EN.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: knowledge_base.json  privacy_policy_zh.txt
app/src/main/cpp/: CMakeLists.txt  llm_mnn_jni.cpp  llm_session.cpp  llm_session.h  llm_stream_buffer.hpp
app/src/main/java/com/doomsday/toolbox/ai/: ChatMessage.kt  NativeLlmSession.kt  OfflineSurvivalAssistant.kt
app/src/main/java/com/doomsday/toolbox/common/: AppPrefs.kt  LocalImageStore.kt
app/src/main/res/drawable/: bg_chip.xml  bg_image_preview.xml  bg_input.xml  bg_message_ai.xml  bg_message_user.xml  bg_screen.xml  bg_secondary_button.xml  ic_compass_needle.xml  ic_image_add.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_send.xml
app/src/main/res/layout/: activity_chat.xml  activity_disclaimer.xml  activity_knowledge.xml  activity_knowledge_detail.xml  activity_main.xml  activity_model_manager.xml  activity_privacy_policy.xml  activity_sos.xml  activity_tools.xml  item_chat_ai.xml  item_chat_user.xml  item_knowledge.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/interview/: AI_APP_INTERVIEW_GUIDE_ZH.md  AI_APP_KEYWORDS_ZH.md
docs/release/: MARKET_CHECKLIST_ZH.md  OFFICIAL_REFERENCE_LINKS.md  PERMISSIONS_AND_DATA_SAFETY_ZH.md  PRIVACY_POLICY_ZH.md  SCREENSHOT_ASSET_PLAN_ZH.md  STORE_LISTING_COPY_ZH.md
docs/release/assets/: screenshot_caption_plan.md
(+22 files in other folders)
